@@ -215,8 +215,8 @@ bool JackThreadedDriver::Init()
             // Will do "something" on OSX only...
             GetEngineControl()->fPeriod = GetEngineControl()->fConstraint = GetEngineControl()->fPeriodUsecs * 1000;
             fThread.SetParams(GetEngineControl()->fPeriod, GetEngineControl()->fComputation, GetEngineControl()->fConstraint);
-            if (fThread.AcquireRealTime(GetEngineControl()->fServerPriority) < 0) {
-                jack_error("AcquireRealTime error");
+            if (fThread.AcquireSelfRealTime(GetEngineControl()->fServerPriority) < 0) {
+                jack_error("AcquireSelfRealTime error");
             } else {
                 set_threaded_log_function(); 
             }
